MR: Working keyboard instrumentation.